major styling and editing

--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
             <p id="text" >Charizard is the final form of Charmander.It looks like a dragon but it is'nt . <br>
             It is one of the most favoured starter pokemon from the Kanto reign. <br>
             Charizard can mega evolve into two different,do Z moves and has a gigamax form.
+            As Mega Charizard X, its body and legs are more physically fit, though its arms remain thin. Its skin turns black with a sky-blue underside and soles. Two spikes with blue tips curve upward from the front and back of each shoulder, while the tips of its horns sharpen, turn blue, and curve slightly upward. Its brow and claws are larger, and its eyes are now red. It has two small, fin-like spikes under each horn and two more down its lower neck. The finger disappears from the wing membrane, and the lower edges are divided into large, rounded points. The third joint of each wing-arm is adorned with a claw-like spike. Mega Charizard X breathes blue flames out the sides of its mouth, and the flame on its tail now burns blue. It is said that its new power turns it black and creates more intense flames.
+
+As Mega Charizard Y, it becomes sleeker in appearance but retains its normal coloration. It has three pointed horns on the back of its head, the middle of which is longer. Its snout has larger fangs and a ridge on the nose. Its neck is shorter, but its torso is thinner and longer. It features longer digitigrade feet. Its hands are less developed, with extremely shortened fingers that are no longer separated from each other. Small wings develop on its wrists, while the ones on its back become larger, lose the wing finger passing through their membrane and end up with ragged edges. The back of its tail has a large spike at the base and three smaller ones near the tip, which now burns with a longer flame. Mega Charizard Y is said to have incredible flying prowess that is greater than a jet fighter.
+
+As Gigantamax Charizard, it becomes larger and physically fit. The lower part of its body glows white with several yellow diamonds located on the lower belly. There are also diamond-shaped spots located on the front legs. The claws located on its hand and feet become longer and sharper. The feet become longer and digitigrade, retaining small glowing soles under the forefeet. The wings are transformed into literal flame wings extending to the shoulder blade and two flames sprout from the horns. The colossal flamed wings were created from the energy of Gigantamaxing. The sclera of the eyes becomes yellow. The glow of a flame can be seen in the mouth, and the teeth grow, with the lower front teeth and three teeth in the middle now protruding when the mouth is closed. The flame on the tail extends out and has three red clouds surrounding it, like the clouds most other Gigantamax Pokémon have. The flames within Gigantamax Charizard burns hotter than 3,600 degrees Fahrenheit. When it roars, the temperature can climb to even higher lengths. The wings are capable of being hotter than magma which Charizard uses to burn its opponents.
             </p>
     </div>
 
 </div>
+<img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="drago" class="chari">
+
     <script src="/script/script.js"></script>
 </body>
 </html>
