--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div id="card2"></div>
-    <img src="https://archives.bulbagarden.net/media/upload/thumb/3/36/006Charizard-Mega_X.png/600px-006Charizard-Mega_X.png" alt="mega x">
-    <img src="https://archives.bulbagarden.net/media/upload/thumb/f/fd/006Charizard-Mega_Y.png/600px-006Charizard-Mega_Y.png" alt="mega y">
-    <img src="https://archives.bulbagarden.net/media/upload/thumb/8/88/006Charizard-Gigantamax.png/600px-006Charizard-Gigantamax.png" alt="giga">
+    <img src="/images/charx.png" alt="mega x">
+    <img src="/images/chary.png" alt="mega y">
+    <img src="/images/charg.png" alt="giga">
     <div id="details">
         <div id="info"></div>
         <div id="description">
