--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ As Gigantamax Charizard, it becomes larger and physically fit. The lower part of
 </div>
 <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="drago" class="chari">
 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IAJjAlX6txc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<footer>
+    <p>A charizard fan page</p>
+    <p>developed by ©TDL2627 </p>
+</footer>
+
     <script src="/script/script.js"></script>
 </body>
 </html>
